Tue Oct 21 10:54:22 1997  Ezra Peisach  <epeisach@mit.edu>

	* enc_des.c: Include string.h/strings.h for memcpy prototype

Thu Jul 31 14:57:05 1997  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in (SRCS): Fix typo s/scrdir/srcdir/

Thu Feb  6 00:14:50 1997  Richard Basch  <basch@lehman.com>

	* kerberos5.c (kerberos5_is): First argument to
		krb5_verify_checksum is a krb5_context!!!

Thu Nov  7 15:29:09 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* kerberos5.c (kerberos5_init): Check the error return from
 		krb5_init_context(), and print an error message if
 		necessary.

Fri Nov  1 20:32:12 1996  Sam Hartman  <hartmans@mit.edu>

	* parsetos.c (proto;): Add parsetos support on all platforms which
 	support TOS[57]

Thu Oct 31 18:29:08 1996  Sam Hartman  <hartmans@mit.edu>

	* auth.h: Move constants for ticket forwarding here.

	* kerberos5.c : Clarify what errors come from what programs
 	(telnetd|telnet); patch by John Hawkinson <jhawk@bbnplanet.com>
 	[77]

Mon Oct 14 00:21:08 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (OBJS): Remove rsaencpwd aned krb4encpwd stuff as
 	well as associated read_password [50]

	* auth.c krb4encpwd.c Makefile.in: Remove krb4encpwd [50]
	While we're at it, remove rsaencpwd as well.

Tue Jul  9 14:59:19 1996  Marc Horowitz  <marc@mit.edu>

	* Makefile.in (LOCALINCLUDES): use @KRB4_INCLUDES@ instead of an
 	explicit path to the in-tree krb4 headers

Mon Jul  8 01:33:30 1996  Marc Horowitz  <marc@mit.edu>

	* enc-proto.h (des_new_random_key, des_set_random_generator_seed,
 	des_key_sched, des_ecb_encrypt, des_string_to_key): removed these
 	declarations.  these are kerberos/des symbols, and should not be
 	declared here.  Two of these symbols (des_key_sched and
 	des_ecb_encrypt) conflict with CNS.
	
Fri Jun 14 19:09:48 1996  Sam Hartman  <hartmans@mit.edu>
*	configure.in * Makefile.in (LOCALINCLUDES): Don't include KerberosIV; use
 	whatever is appropriate for the withval
