@@ -1,3 +1,11 @@
+Thu Nov 20 17:13:42 1997  Tom Yu  <tlyu@mit.edu>
+
+	* forward.c (rd_and_store_for_creds): Fix up to no longer do the
+	chown [krb5-appl/502]
+
+	* kerberos5.c (kerberos5_is): Fix up call to
+	rd_and_store_for_creds. [krb5-appl/502]
+
 Tue Oct 21 10:54:22 1997  Ezra Peisach  <epeisach@mit.edu>
 
 	* enc_des.c: Include string.h/strings.h for memcpy prototype
